--- a/app/app.css
+++ b/app/app.css
@@ -14,6 +14,60 @@
 	--font-red-hat-text: "Red Hat Text", "sans-serif";
 	--font-red-hat-display: "Red Hat Display", "sans-serif";
 	--font-red-hat-mono: "Red Hat Mono", "sans-serif";
+
+	--animate-wiggle: wiggle 1s ease-in-out infinite;
+	@keyframes wiggle {
+		0%,
+		100% {
+			transform: rotate(-3deg);
+		}
+		50% {
+			transform: rotate(3deg);
+		}
+	}
+
+	--animate-popIn: popIn 300ms ease-out forwards;
+	@keyframes popIn {
+		0% {
+			opacity: 0;
+			scale: 0;
+		}
+		80% {
+			opacity: 1;
+			scale: 1.1;
+		}
+		100% {
+			opacity: 1;
+			scale: 1;
+		}
+	}
+
+	--animate-beckon: 500ms 600ms beckon linear;
+	@keyframes slideUp {
+		from {
+			top: 200px;
+		}
+		to {
+			top: 0;
+		}
+	}
+	@keyframes beckon {
+		0% {
+			top: 0;
+		}
+		25% {
+			top: -15px;
+		}
+		50% {
+			top: 0;
+		}
+		75% {
+			top: -15px;
+		}
+		100% {
+			top: 0;
+		}
+	}
 }
 
 html,
