--- a/app/app.css
+++ b/app/app.css
@@ -154,7 +154,7 @@ body {
 	mask-size: 100%;
 }
 
-/* Filters */
+/* Svgfilters */
 .content-aware-shadow {
 	-webkit-filter: url("#dropshadow");
 	filter: url("#dropshadow");
