--- a/app/routes/menu/menu.css
+++ b/app/routes/menu/menu.css
@@ -1,4 +1,4 @@
-@import "../../node_modules/tailwindcss";
+@import "../../../node_modules/tailwindcss";
 
 #order-page-img {
 	mask-image: linear-gradient(black 40%, transparent);
