Checkout now actually checks out

--- a/app/routes/menu/menu.css
+++ b/app/routes/menu/menu.css
@@ -25,7 +25,8 @@
 	content: "";
 }
 #menu-body {
-	border-radius: var(--corner-size) 0 var(--corner-size) var(--corner-size);
+	border-radius: var(--corner-size) 0 0 0;
+	position: relative;
 }
 
 .item-body {
