--- a/app/app.css
+++ b/app/app.css
@@ -35,6 +35,8 @@
 	--icon-size-sm: 1.5rem;
 	--icon-size-md: 2.5rem;
 	--icon-size-lg: 4rem;
+	--icon-size-xl: 6rem;
+	--icon-size-2xl: 8rem;
 
 	--animate-wiggle: wiggle 1s ease-in-out infinite;
 	@keyframes wiggle {
