--- a/app/app.css
+++ b/app/app.css
@@ -32,6 +32,7 @@
 	--font-red-hat-display: "Red Hat Display", "sans-serif";
 	--font-red-hat-mono: "Red Hat Mono", "sans-serif";
 
+	--icon-size-xs: 1rem;
 	--icon-size-sm: 1.5rem;
 	--icon-size-md: 2.5rem;
 	--icon-size-lg: 4rem;
