--- a/app/app.css
+++ b/app/app.css
@@ -155,7 +155,7 @@ body {
 }
 
 .btn {
-	@apply flex cursor-pointer items-center justify-center rounded-xl bg-accent font-red-hat-text font-bold transition-all duration-150 hover:scale-105 hover:bg-accent-dark;
+	@apply flex cursor-pointer items-center justify-center rounded-xl bg-accent font-red-hat-text font-bold transition-all duration-150 hover:scale-105 hover:rotate-3;
 }
 
 .layered {
