--- a/app/routes/guest/menu/menu.css
+++ b/app/routes/guest/menu/menu.css
@@ -48,11 +48,12 @@
 	--br: 6px; /* border radius */
 
 	position: absolute;
-	top: 5px;
+	top: 15px;
 	left: 65%;
-	rotate: -10deg;
+	/* rotate: -10deg; */
 	/* create stacking context for children */
 	z-index: 1;
+	transform-origin: -20px 50%;
 }
 .item-price-tag {
 	position: relative;
@@ -133,11 +134,24 @@
 	z-index: 1000;
 }
 .item-btn-container {
-	height: calc(1 / 4 * var(--card-height));
+	/* height: calc(1 / 4 * var(--card-height)); */
+	--row-height: calc(1 / 4 * var(--card-height) - var(--card-padding));
+
 	width: 100%;
-	display: flex;
+	display: grid;
+	grid-template-rows: repeat(2, var(--row-height));
+	gap: var(--card-padding);
 	align-items: start;
 	padding: calc(var(--card-padding) / 2);
+}
+.item-btn {
+	background: var(--color-accent);
+	font-family: "Red Hat Text", sans-serif;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
+	cursor: pointer;
 }
 .item-count-input {
 	background: var(--color-accent);
