--- a/app/routes/guest/menu/menu.css
+++ b/app/routes/guest/menu/menu.css
@@ -158,15 +158,34 @@
 }
 
 .item-options-container {
-	padding: 0 var(--border-radius-playful);
+	width: calc(100% - 2 * var(--border-radius-playful));
+
+	background: rgba(
+		var(--color-secondary-r),
+		var(--color-secondary-g),
+		var(--color-secondary-b),
+		0.75
+	);
+	border-radius: 0 0 var(--border-radius-playful) var(--border-radius-playful);
+
+	opacity: 0;
+	display: grid;
+	grid-template-rows: 0fr;
+	transition: all 300ms;
+
+	overflow: hidden;
+}
+.item-options-container > {
+	overflow: hidden;
+}
+.item-options-container.opened {
+	opacity: 1;
+	grid-template-rows: 1fr;
 }
 
 .item-options {
-	height: fit-content;
+	overflow: hidden;
 	padding: var(--card-padding);
-	background: var(--color-secondary);
-	border-radius: 0 0 var(--border-radius-playful) var(--border-radius-playful);
-	opacity: 0.75;
 }
 
 /* Hide scrollbar but allow scrolling */
